2006-02-24 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Move attach.gif and mail.gif from mod to res/gfx directory.
	* Move icon_tx_directmail_category.gif from extension root to res/gfx directory.
	* Import newmail.gif from t3lib/gfx into res/gfx
	* Import dmail.gif, dmail_list.gif, modules_dmail.gif, modules_dmail__h.gif into res/gfx
	* Use t3lib_iconWorks for all icons.
	
2006-02-23 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Remove enablePlain and enableHTML configuration properties. Rely on sendOptions and submitted url's.
	* Correct query of pages not yet direct mails in Direct mails function.
	* Completed French translation.

2006-02-22 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Update to csh files.
	* Reverting change to jumpUrl after correction of bugtracker issue 2592 in TYPO3core.
	* Update to manual (incomplete).
	* Remove help function.
	* Add priority as module configuration property.
	* Correcting accidental removal of HTMLParams column in TCA.
	* Localization of module completed.

2006-02-21 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Path setting corrections in dmailerd.phpcron and returnmail.phpsh
	* Correct jumpUrl hook so that it will work even if $TYPO3_CONF_VARS['SYS']['doNotCheckReferer'] is not set.
	* Add includeMedia option on direct mails. If not set, images and other media are not included in the HTML content (cid:); instead only absolute href's are included in the html code.
	* Add file locallang_csh_sysdmailcat.php and small updates to other csh files.
	
2006-02-18 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Add class.ext_update.php: access the Categories conversion function from the EM dropdown menu.
	* Add explanation for non-converted records in the output of the conversion.
	* Correction to TCA: add 'l10n_mode' => 'exclude' on tt_content column module_sys_dmail_category.

2006-02-17 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>